--- a/projecto mascote android/Copia.css
+++ b/projecto mascote android/Copia.css
@@ -8,12 +8,13 @@
     src: url(../fontes/idroid.otf) format(opentype);
 }
 :root{
-    --cor1: #83e1ad;
-    --cor2: #3ddc84;
-    --cor3: #2fa866;
-    --cor4: #1a5c37;
-    --cor5: #063d1e;
-    --cor6: #d3ffd3;
+    --cor1: #1eb9e8;
+    --cor2: #1cafdb;
+    --cor3: #199ac2;
+    --cor4: #147c9c;
+    --cor5: #0c495c;
+    --cor6: #c2f1ff;
+    --cor7: #b3deff;
 
     --fonte-padrão: Arial, Helvetica, sans-serif;
     --fonte-destaque: 'bebas';
@@ -25,9 +26,10 @@
 }
 body{
     font-family:var(--fonte-padrão);
+    background-color: var(--cor6);
 }
 header{
-    background-image: linear-gradient(to bottom,var(--cor2),var(--cor4));
+    background-image: linear-gradient(to bottom,var(--cor1),var(--cor4));
     height: 130px;
     text-align: center;
     color: white;
@@ -38,13 +40,14 @@ header h1{
     min-width: 400px;
     margin: auto;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.434);
-   
+   color: var(--cor6);
 }
 header p{
     font-size: 1.1em;
     max-width: 450px;
     margin: auto;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.418);
+    color: white;
 }
 nav{
     background-color: var(--cor4);
@@ -54,8 +57,7 @@ nav{
 nav a{
     font: bold 1.1em var(--fonte-padrão);
     text-decoration: none;
-    color: white;
-    color: var(--cor2);
+    color: var(--cor6);
     margin-left: 15px;
     padding: 4px 10px 2px 10px;
     border-radius: 5px;
@@ -67,9 +69,6 @@ nav a:hover{
     color: var(--cor5);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.229);
 }
-body{
-    background-color: var(--cor6);
-}
 main{
     max-width: 900px;
     background-color: white;
@@ -80,6 +79,7 @@ main{
 }
 article{
     padding: 20px 17px;
+    background-color: white;
 }
 article p{
     text-indent: 35px;
@@ -92,18 +92,10 @@ article h1 {
     font: normal 1.8em var(--fonte-droid);
     color: var(--cor5);
 }
-article img{
-    width: 95%;
-    margin: auto;
-    display: block;
-}
-#bugdroid{
-    width: 50%;
-}
 article h2{
     font: normal 1.5em var(--fonte-droid);
-    background-image: linear-gradient(to right, var(--cor2), transparent);
-    color: var(--cor4);
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    color: var(--cor5);
 }
 .negrito{
     color: var(--cor4);
@@ -111,9 +103,9 @@ article h2{
 }
 .link{
     text-decoration: none;
-    color: var(--cor4);
+    color: var(--cor5);
     font-weight: bold;
-    background-color: var(--cor1);
+    background-color: var(--cor6);
     padding: 1px;
 }
 .link::after{
@@ -124,8 +116,16 @@ article h2{
     color: var(--cor3);
     background-color: transparent;
 }
+article img{
+    width: 95%;
+    margin: auto;
+    display: block;
+}
+#bugdroid{
+    width: 50%;
+}
 #video{
-    background-color: var(--cor5);
+    background-color: white;
     margin: 10px  -17px 20px  -17px;
     padding: 15px 0px;
     position: relative;
@@ -141,7 +141,7 @@ article h2{
 aside{
     margin: auto;
     max-width: 900px;
-    background-color: var(--cor1);
+    background-color: var(--cor6);
     border-radius: 9px 9px 9px 9px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.489);
 }
@@ -162,7 +162,7 @@ aside h3{
     border-radius: 10px 10px 0px 0px;
 }
 footer{
-    background-color: var(--cor4);
+    background-color: var(--cor3);
     color: white;
     font-weight: bold;
     text-align: center;
